  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 更新 FX110虛假交易所
  * 更新 ScamAdviser電子報

* 20230425 Update
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看與網友匯報廣告或網站
  * 調整 正規化規則歸類到TLD
  * 調整 LineBot功能，更換whois lib
  * 修復 LineBot功能，回傳多個建立時間
  * 修復 LineBot功能，回傳多個status，故取消顯示

* 20230424 Update
  * 加入 照片辨識文字
  * 加入 robots.txt
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 FB網友提供清單
  * 修復 Log位置
  * 調整 LineBot

* 20230423 Update
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 FB網友提供清單
  * 調整 LineBot

* 20230422 Update
  * 更新 165反詐騙公告網址(112/4/11-112/4/17民眾通報假投資(博弈)詐騙網站)
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 調整 優化自動更新List與自動建立清單

* 20230421 Update
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 修復 LineBot無法自動更新List

* 20230420 Update
  * 加入 LineBot Code
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 寵物詐騙
  * 更新 Dcard受害文章
  * 解放 lihi系列縮網址

* 20230419 Update
  * 加入 所需要的script
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 更新 ScamAdviser電子報

* 20230418 Update
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 更新 FX110虛假交易所

* 20230417 Update
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章

* 20230416 Update
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章

* 20230415 Update
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 更新 FB網友提供清單

* 20230414 Update
  * 更新 165反詐騙公告網址(112/4/4-112/4/10民眾通報假投資(博弈)詐騙網站)
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 調整 部分網站被封鎖

* 20230413 Update
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 更新 FB網友提供清單

* 20230412 Update
  * 加入 FB網友提供清單
  * 更新 內容農場與多導向可能危險網站
  * 更新 Dcard受害文章
  * 更新 ScamAdviser電子報
  * 移除 清單重複內容
  * 解放 cloudfront.net

* 20230411 Update
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章

* 20230410 Update
  * 加入 鎖定vip、online、xyz網域
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 更新 FX110虛假交易所

* 20230408 Update
  * 更新 165反詐騙公告網址(112/3/29-112/4/3民眾通報假投資(博弈)詐騙網站)
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章
  * 更新 ScamAdviser電子報

* 20230403 Update
  * 加入 移除名稱小程式
  * 更新 個人不想看與網友匯報廣告或網站
  * 更新 Dcard受害文章

* 20230401 Update
  * 更新 個人不想看與網友匯報廣告或網站