@@ -96,6 +96,7 @@
   * 更新 FB網友提供清單
   * 修復 Log位置
   * 調整 LineBot
+  * 調整 LineBot Admin功能關鍵字減少
 
 * 20230423 Update
   * 更新 個人不想看與網友匯報廣告或網站
